--- a/MueblesFast/src/componentes/Estilos.css
+++ b/MueblesFast/src/componentes/Estilos.css
@@ -2,11 +2,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: rgb(247, 241, 233)
+    
 }
 /*inicio cabecera*/
 .cabecera{
-    
+    background-color: rgba(250, 223, 236, 0.76);
     width: 100%;
     height: 100px;
     padding: 10px 50px;
@@ -26,7 +26,7 @@
    
     
 }
-#contenedorlogo{
+.contenedor{
     box-shadow: 3px 3px 4px black;
     width: 65px;
     height: 60px;
@@ -68,6 +68,63 @@
 .youtube:hover{
     filter: grayscale(1);
     transition: all 0.6s ease;
+}
+
+
+
+
+.pie{  
+    width: 100%;
+   height: 100px;
+   display: flex;
+   color: rgb(252, 250, 250);
+   background-color: chocolate;
+}
+.texto h1{
+    margin: 30px;
+    margin-left: 100px;
+}
+.fechas{
+    display: flex;
+    text-align: center;
+    margin: 30px;
+    margin-left: auto;
+
+}
+
+.partebaner{
+ 
+ 
+    display: flex;
+    justify-content: center;
+    background-color: rgba(240, 139, 189, 0.137);
+    
+}
+.baner{
+    width: 35%;
+    
+}
+
+.formul{
+    height: 400px;   
+    margin-left:20%;
+    width: 50%;
+   
+}
+
+.primero{
+    display: flex;
+
+}
+
+.Name{
+   
+    flex-direction: column;
+
+}
+
+.textname{
+    flex-direction: column;
 }
 
 
