Di estilos al componente CabeceraLogo

--- a/MueblesFast/src/componentes/Estilos.css
+++ b/MueblesFast/src/componentes/Estilos.css
@@ -40,6 +40,9 @@
     width: 100%;
     height: 100%;    
 }
+.cabecera_img:hover {
+    transform:scale(1.4);
+}
 
 .redes {
     margin-left: auto;
